tests/paczka1/fuzzy1/31318780.err
Error in line 2: gEwt A566 65,6
Error in line 10: eYgopxE A566 21,72
Error in line 3: gEwt A543 99,4
Error in line 13: 3uNCF S164 24,0
Error in line 21: qpgUY S164 69,9
Error in line 5: eYgopxE A566 12,3
Error in line 23: eYgopxE S164 27,9
Error in line 24: ctUi A566 94,8
